# Synapse-Copilot

./: .env.example  .gitignore  helper.py  main.py  pyproject.toml  req.py  run.py
api_collection/test/resources/input/: stripe.postman_collection.json
api_collection/test/resources/output/: data.yml  stripe.yml
icl_examples/api_selector/: monday.txt  resend.txt  slack.txt  stripe.txt
icl_examples/planner/: monday.txt  resend.txt  slack.txt  stripe.txt
model/: api_llm.py  caller.py
specs/: monday_oas.json  resend_oas.json  slack_oas.json  stripe_oas.json
utils/: utils.py
